--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ position:absolute;
 height: 28px;
 width: 28px;
 border-radius: 50%;
-background-image: url(C://Users/puran/OneDrive/Desktop/unchecked.png);
+background-image: url("unchecked.png");
 background-size:cover;
 background-position: center;
 top: 12px;
@@ -88,5 +88,22 @@ color: #555;
 text-decoration:line-through;
 }
 ul li.checked::before{
-background-image:url(C://Users/puran/OneDrive/Desktop/checked.png);
+background-image:url("checked.png");
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color:#555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+ul li span:hover{
+    background: #edeef0;
 }
