--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ background:orange;
 font-size:16px;
 cursor: pointer;
 border-radius: 40px;
+transition:background-color 0.3s ease;
+}
+
+button:hover{
+    background:darkorange;
 }
 
 ul li{
